# djinode

./: .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
src/: CMakeLists.txt  main.cpp
